# BendMeter

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
